fixing spacing between divs

--- a/admin-electron/styles/styles.css
+++ b/admin-electron/styles/styles.css
@@ -31,7 +31,7 @@ html{
     display: flex;
     border-radius: 10px;
     background-color: white;
-    min-height: 600px;
+    min-height: 400px;
     width: 500px;
     justify-content: center;
     align-items: center;
